# ddpy-route53

./: .gitignore  pyproject.toml  pyrightconfig.json
contrib/ddpy.aur/: PKGBUILD
ddpy/plugins/route53/: __init__.py
tests/: test_ddpy_route53.py
